# triton-docs-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  opencode.json  pyproject.toml
src/triton_docs_mcp/: __init__.py  config.py  crawler.py  indexer.py  search.py  server.py
src/triton_docs_mcp/scripts/: index_docs.py
src/triton_mcp/: __init__.py  config.py  crawler.py  indexer.py  prompts.py  search.py  server.py
src/triton_mcp/scripts/: index_docs.py
tests/: test_integration.py  test_unit.py
