[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triton-mcp"
version = "0.1.0"
description = "MCP server for NVIDIA Triton Inference Server documentation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.27.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
triton-mcp = "triton_mcp.server:main"
triton-index = "triton_mcp.scripts.index_docs:main"

[tool.hatch.build.targets.wheel]
packages = ["src/triton_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]